Fixed overflow images while preloading

--- a/css/loader.css
+++ b/css/loader.css
@@ -11,7 +11,7 @@
   transition: opacity 1.3s ease-in-out;
 }
 
-.loadingScreenloaderContentImgZIndex {
+.loadingScreenLoaderContentImgZIndex {
   z-index: 3;
 }
 
